--- a/test.html
+++ b/test.html
@@ -61,6 +61,25 @@ canvas {
     pointer-events: none;
     z-index: 1;
 }
+.custom-menu {
+    display: none;
+    position: absolute;
+    background-color: #1b1b1b;
+    color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    padding: 10px;
+}
+
+.custom-menu .menu-item {
+    padding: 8px 16px;
+    cursor: pointer;
+}
+
+.custom-menu .menu-item:hover {
+    background-color: #333;
+}
 </style>
 </head>
 <body>
@@ -71,16 +90,23 @@ canvas {
 <div class="menu">
     <div class="menu-item" id="pencil">Pencil</div>
     <div class="menu-item" id="marker">Marker</div>
-    <div class="menu-item" id="eraser">Eraser</div>
     <div class="menu-item" id="wipe">Wipe</div>
     <input type="color" id="colorPicker" value="#ffffff" style="margin-left: 15px;">
 </div>
+
+<div class="custom-menu" id="customMenu">
+    <div class="menu-item" id="save">Save as...</div>
+    <div class="menu-item" id="halo">Halo</div>
+    <div class="menu-item" id="background">Background</div>
+</div>
+
 <script>
 const img = document.getElementById("freak");
 const music = document.getElementById("music");
 const canvas = document.getElementById("drawingCanvas");
 const ctx = canvas.getContext("2d");
 const colorPicker = document.getElementById("colorPicker");
+const customMenu = document.getElementById("customMenu");
 
 function resizeCanvas() {
     canvas.width = window.innerWidth * 0.95;
@@ -103,7 +129,7 @@ img.addEventListener("mousedown", (e) => {
     lastX = img.offsetLeft + img.width / 2;
     lastY = img.offsetTop + img.height / 2;
 });
-// below detects mouse movement
+
 document.addEventListener("mousemove", (e) => {
     if (isDragging) {
         const bodyRect = document.body.getBoundingClientRect();
@@ -123,20 +149,20 @@ document.addEventListener("mousemove", (e) => {
         if (newTop + imgRect.height > bodyRect.height) {
             newTop = bodyRect.height - imgRect.height;
         }
-// end mouse movement detection
+
         img.style.left = newLeft + "px";
         img.style.top = newTop + "px";
 
         ctx.strokeStyle = currentTool === 'marker' ? "rgba(" + hexToRgb(currentColor) + ", 0.5)" : currentColor;
         ctx.lineWidth = currentTool === 'marker' ? 5 : 2;
-// pencil code below
+
         ctx.beginPath();
         ctx.moveTo(lastX, lastY);
         ctx.lineTo(newLeft + img.width / 2, newTop + img.height / 2);
         ctx.stroke();
+
         lastX = newLeft + img.width / 2;
         lastY = newTop + img.height / 2;
-// pencil code ends
     }
 });
 
@@ -172,10 +198,6 @@ document.getElementById("marker").addEventListener("click", () => {
     currentTool = 'marker';
 });
 
-document.getElementById("eraser").addEventListener("click", () => {
-    currentTool = 'eraser';
-});
-
 colorPicker.addEventListener("input", (e) => {
     currentColor = e.target.value;
 });
@@ -186,6 +208,47 @@ function hexToRgb(hex) {
     let b = parseInt(hex.slice(5, 7), 16);
     return `${r}, ${g}, ${b}`;
 }
+
+document.addEventListener("contextmenu", (e) => {
+    e.preventDefault();
+    customMenu.style.display = 'block';
+    customMenu.style.left = `${e.pageX}px`;
+    customMenu.style.top = `${e.pageY}px`;
+});
+
+document.addEventListener("click", () => {
+    customMenu.style.display = 'none';
+});
+
+document.getElementById("save").addEventListener("click", () => {
+    const link = document.createElement('a');
+    link.download = 'freaky_drawing.png';
+    link.href = canvas.toDataURL();
+    link.click();
+});
+
+document.getElementById("halo").addEventListener("click", () => {
+    currentTool = 'halo';
+});
+
+document.getElementById("background").addEventListener("click", () => {
+    const newColor = prompt("Enter a new background color in hex:", "#000000");
+    if (newColor) {
+        document.body.style.backgroundColor = newColor;
+    }
+});
+
+canvas.addEventListener('mousedown', (e) => {
+    if (currentTool === 'halo') {
+        ctx.strokeStyle = currentColor;
+        ctx.lineWidth = 5;
+        ctx.beginPath();
+        ctx.arc(e.clientX, e.clientY, 30, 0, 2 * Math.PI);
+        ctx.shadowColor = currentColor;
+        ctx.shadowBlur = 15;
+        ctx.stroke();
+    }
+});
 </script>
 </body>
 </html>
