nothing to hide here dont check this code 	modified:   test.html

--- a/test.html
+++ b/test.html
@@ -236,6 +236,9 @@ document.getElementById("background").addEventListener("click", () => {
     if (newColor) {
         document.body.style.backgroundColor = newColor;
     }
+    if (newColor === "freakybob") {
+        alert("are you searching for easter eggs? well i guess you found one")
+    }
 });
 
 canvas.addEventListener('mousedown', (e) => {
