--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
     width: 95vw;
     height: 95vh;
     position: absolute;
-    top: 2.5%;
+    top: 4.9%;
     left: 2.5%;
 }
 
@@ -57,14 +57,35 @@ img {
 }
 canvas {
     position: absolute;
-    top: 0;
+    margin-top: 10px;
     left: 0;
     pointer-events: none;
     z-index: 1;
 }
+    
+.button-container button {
+    background-color: rgb(191, 26, 224);
+    border: 2px solid #555;
+    color: #555;
+    font-size: 18px;
+    cursor: pointer;
+    padding: 5px 20px;
+    border-radius: 5px;
+    transition: color 0.3s, background-color 0.3s;
+    margin-top: -40px;
+    margin-left: 500px;
+}
+.button-container button:hover {
+    color: #ffffff;
+    background-color: rgb(195, 26, 224);
+}
 </style>
 </head>
 <body>
+    <div class="button-container">
+        <a href="https://freakybob.site">
+            <button>Go back to Main Website :3</button>
+        </a>
 <canvas id="drawingCanvas"></canvas>
 <audio id="music" src="https://archive.org/download/wii-fit-ost/15%20Yoga.mp3" loop></audio>
 <img src="freaky (1).webp" id="freak">
