--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@ canvas {
 </head>
 <body>
     <div class="button-container">
-        <a href="https://freakybob.site">
+        <a href="https://freakybob-team.github.io/Freakybob.siteSL/>
             <button>Go back to Main Website :3</button>
         </a>
+            </div>
 <canvas id="drawingCanvas"></canvas>
 <audio id="music" src="https://archive.org/download/wii-fit-ost/15%20Yoga.mp3" loop></audio>
 <img src="freaky (1).webp" id="freak">
