--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ canvas {
 </head>
 <body>
     <div class="button-container">
-        <a href="https://freakybob.site">
+        <a href="https://freakybob-team.github.io/Freakybob.siteSL/">
             <button>Go back to Main Website :3</button>
         </a>
 <canvas id="drawingCanvas"></canvas>
